# gloomy-learnopengl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
gloomy_learnopengl/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/advanced_data/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/advanced_glsl/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/anti_aliasing/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/blending/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/cubemaps/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/depth_testing/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/face_culling/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/framebuffers/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/framebuffers/assets/shaders/screen/: FragmentShader.hlsl  VertexShader.hlsl
gloomy_learnopengl/advanced_opengl/framebuffers/assets/shaders/shader/: FragmentShader.hlsl  VertexShader.hlsl
gloomy_learnopengl/advanced_opengl/framebuffers/include/learnopengl/: learnopengl.hpp  resources.hpp  types.hpp
gloomy_learnopengl/advanced_opengl/framebuffers/src/: main.cpp
gloomy_learnopengl/advanced_opengl/geometry_shader/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/instancing/: CMakeLists.txt
gloomy_learnopengl/advanced_opengl/instancing/assets/models/planet/: planet.mtl
gloomy_learnopengl/advanced_opengl/instancing/assets/models/rock/: rock.mtl
gloomy_learnopengl/advanced_opengl/instancing/assets/shaders/asteroids/: VertexShader.hlsl
gloomy_learnopengl/advanced_opengl/instancing/assets/shaders/planet/: FragmentShader.hlsl  VertexShader.hlsl
gloomy_learnopengl/advanced_opengl/instancing/include/learnopengl/: learnopengl.hpp  model.hpp  resources.hpp  types.hpp
gloomy_learnopengl/advanced_opengl/instancing/include/objl/: objloader.hpp
gloomy_learnopengl/advanced_opengl/instancing/src/: main.cpp
gloomy_learnopengl/advanced_opengl/stencil_testing/: CMakeLists.txt
gloomy_learnopengl/getting_started/: CMakeLists.txt
gloomy_learnopengl/getting_started/camera/: CMakeLists.txt
gloomy_learnopengl/getting_started/camera/assets/shaders/: VertexShader.hlsl
gloomy_learnopengl/getting_started/camera/include/learnopengl/: cube.hpp
gloomy_learnopengl/getting_started/camera/src/: main.cpp
gloomy_learnopengl/getting_started/hello_triangle/: CMakeLists.txt
gloomy_learnopengl/getting_started/textures/: CMakeLists.txt
gloomy_learnopengl/getting_started/textures/assets/shaders/: VertexShader.hlsl
gloomy_learnopengl/getting_started/textures/include/learnopengl/: glfw_context.hpp
gloomy_learnopengl/getting_started/transformations/: CMakeLists.txt
gloomy_learnopengl/getting_started/transformations/assets/shaders/: VertexShader.hlsl
gloomy_learnopengl/getting_started/transformations/include/learnopengl/: learnopengl.hpp
gloomy_learnopengl/lighting/lighting_maps/: CMakeLists.txt
gloomy_learnopengl/lighting/lighting_maps/include/learnopengl/: types.hpp
gloomy_learnopengl/lighting/lighting_maps/src/: main.cpp
gloomy_learnopengl/lighting/materials/: CMakeLists.txt
gloomy_learnopengl/lighting/materials/assets/shaders/materials/: FragmentShader.hlsl
gloomy_learnopengl/lighting/materials/include/learnopengl/: learnopengl.hpp  material.hpp
gloomy_learnopengl/lighting/materials/src/: main.cpp
gloomy_learnopengl/model_loading/model/: CMakeLists.txt
gloomy_learnopengl/model_loading/model/assets/models/container/: container.mtl
gloomy_learnopengl/model_loading/model/assets/shaders/: VertexShader.hlsl
gloomy_learnopengl/model_loading/model/include/learnopengl/: glfw_context.hpp  resources.hpp
tutorials/: CMakeLists.txt
tutorials/getting_started/camera/: CMakeLists.txt
tutorials/getting_started/camera/include/learnopengl/: camera.hpp  learnopengl.hpp
tutorials/getting_started/camera/src/: main.cpp
tutorials/getting_started/coordinate_systems/: CMakeLists.txt
tutorials/getting_started/coordinate_systems/assets/shaders/: FragmentShader.hlsl
tutorials/getting_started/coordinate_systems/include/learnopengl/: glfw_context.hpp  resources.hpp  types.hpp
tutorials/getting_started/coordinate_systems/src/: main.cpp
tutorials/getting_started/hello_triangle/: CMakeLists.txt
tutorials/getting_started/hello_triangle/include/learnopengl/: learnopengl.hpp
tutorials/getting_started/hello_triangle/src/: main.cpp
tutorials/getting_started/shaders/: CMakeLists.txt
tutorials/getting_started/shaders/assets/shaders/: FragmentShader.hlsl
tutorials/getting_started/shaders/include/learnopengl/: learnopengl.hpp  resources.hpp
tutorials/getting_started/shaders/src/: main.cpp
tutorials/getting_started/textures/: CMakeLists.txt
tutorials/getting_started/textures/assets/shaders/: FragmentShader.hlsl
tutorials/getting_started/textures/include/learnopengl/: resources.hpp
tutorials/getting_started/textures/src/: main.cpp
tutorials/getting_started/transformations/: CMakeLists.txt
tutorials/getting_started/transformations/src/: main.cpp
tutorials/lighting/basic_lighting/: CMakeLists.txt
tutorials/lighting/basic_lighting/assets/shaders/basic_lighting/: FragmentShader.hlsl
tutorials/lighting/basic_lighting/assets/shaders/lamp/: FragmentShader.hlsl  VertexShader.hlsl
tutorials/lighting/basic_lighting/include/learnopengl/: cube.hpp
tutorials/lighting/colors/: CMakeLists.txt
tutorials/lighting/colors/include/learnopengl/: camera.hpp  cube.hpp  resources.hpp
tutorials/lighting/colors/src/: main.cpp
tutorials/lighting/light_casters/: CMakeLists.txt
tutorials/lighting/light_casters/assets/shaders/lamp/: FragmentShader.hlsl
tutorials/lighting/light_casters/assets/shaders/light_casters/: FragmentShader.hlsl
tutorials/lighting/light_casters/include/learnopengl/: learnopengl.hpp  resources.hpp
tutorials/lighting/multiple_lights/: CMakeLists.txt
tutorials/lighting/multiple_lights/assets/shaders/multiple_lights/: FragmentShader.hlsl
tutorials/lighting/multiple_lights/include/learnopengl/: camera.hpp
(+25 files in other folders)
