add_subdirectory(depth_testing)
add_subdirectory(stencil_testing)
add_subdirectory(blending)
add_subdirectory(face_culling)
add_subdirectory(framebuffers)
add_subdirectory(cubemaps)
add_subdirectory(advanced_data)
add_subdirectory(advanced_glsl)
add_subdirectory(geometry_shader)
add_subdirectory(instancing)
add_subdirectory(anti_aliasing)